crates/tokio-otp/tests/ui/topology/metadata_not_enabled.stderr
error: `sends_to` requires `#[topology(metadata)]` on the topology struct
  --> tests/ui/topology/metadata_not_enabled.rs:16:16
   |
16 |     #[topology(sends_to(park))]
   |                ^^^^^^^^
